# cyber-defense-agent

./: Dockerfile  README.md  README_fix.md  ai_agent.py  ai_detector.py  app.py  attacker.py  detector.py  environment.py  grader.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  responder.py  reward.py  tasks.py  ui.py  validate-submission.sh
